# speckit-readtrack

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-readtrack-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-readtrack-core/checklists/: requirements.md
specs/001-readtrack-core/contracts/: cli-contract.md
src/readtrack/: __init__.py  __main__.py  cli.py  domain.py  stats.py  storage.py
tests/: conftest.py
tests/contract/: test_cli_contract.py
tests/integration/: test_storage_roundtrip.py
tests/unit/: test_domain.py  test_stats.py
